2004-08-19  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.7.92.

==================== 2.7.91.1 ====================

2004-08-19  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.7.91.1.

2004-08-19  Mark McLoughlin  <mark@skynet.ie>

	Revert the patch to make use of the merge-subtree feature at
	specific points in the tree. Not clear that it solves the
	problems we thought it solved. Patch archived in bug #138498

	* backends/markup-tree.[ch]:
	(markup_tree_get): remove try_merge flag.
	(markup_dir_sync): don't try and save as a merged subtree.
	
	* backends/markup-backend.c: (resolve_address), (ms_new):
	Remove the "nomerge" backend flag.
	
	* backends/gconf-merge-tree.c:
	(recursively_load_subtree): add back.
	(merge_tree): upd. for markup_tree_get() change.

2004-08-16  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "bs" to ALL_LINGUAS.

2004-08-16  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.7.92.

==================== 2.7.91 ====================

2004-08-16  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.7.91.

2004-08-11  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/xml-cache.c: (cache_clean): Use NULL in place of 0.
	* configure.in: Added nb to ALL_LINGUAS.
	* gconf/gconf-internals.c: (gconf_invalid_corba_value): ANSI
	parameter list warning.
	* gconf/gconf-sanity-check.c: (ensure_gtk): NULL vs. 0
	* gconf/gconfd.c: (main): Same. Closes bug #149843.

2004-08-10  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconftool.c: (main): set the umask for
	--makefile-install-mode	so we always install the
	schemas with the correct permissions. bug #145041.

2004-08-07  Danilo Šegan  <dsegan@gmx.net>

	Fixes bug #149518.
	
	* gconf/gconftool.c (options): s/dir/directory/ s/standard out/standard output/.
	* gconf/gconfd.c (main): s/fd/file descriptor/.
	* gconf/gconf-sources.c (gconf_sources_new_from_addresses): s/config/configuration/.